Fix .font-align() not working sometimes.
Also make sure we use full font statement.

--- a/examples/001_Overview/stylesheet.css
+++ b/examples/001_Overview/stylesheet.css
@@ -127,8 +127,13 @@ h1 {
   margin-bottom: calc(1.5rem + -1.3125rem);
 }
 h1 + p {
+  position: relative;
+  top: -4.24px;
+  top: -0.265rem;
+  font: italic 400 24px / 1.25 'Baskerville', sans-serif;
+  font-size: 1.5rem;
   margin-bottom: 24px;
-  margin-bottom: calc(1.5rem + -1.3125rem);
+  margin-bottom: calc(1.5rem + -0.375rem);
 }
 h2 {
   position: relative;
