--- a/tests/stylesheet.css
+++ b/tests/stylesheet.css
@@ -651,33 +651,29 @@ html {
   position: relative;
   top: -11.572px;
   top: -0.72325rem;
-  font-size: 30px;
+  font: 400 30px / 1.2 'Verdana', sans-serif;
   font-size: 1.875rem;
-  line-height: 1.2;
 }
 #baseline-horizontal .small {
   position: relative;
   top: -3px;
   top: -0.1875rem;
-  font-size: 16px;
+  font: 400 16px / 1.875 'Verdana', sans-serif;
   font-size: 1rem;
-  line-height: 1.875;
 }
 #baseline-horizontal .tiny {
   position: relative;
   top: 1.592px;
   top: 0.0995rem;
-  font-size: 12px;
+  font: 400 12px / 2 'Verdana', sans-serif;
   font-size: 0.75rem;
-  line-height: 2;
 }
 #baseline-vertical h1 {
   position: relative;
   top: -22.96057143px;
   top: -1.43503571rem;
-  font-size: 50px;
+  font: 400 50px / 0.85714286 'Verdana', sans-serif;
   font-size: 3.125rem;
-  line-height: 0.85714286;
   margin-top: 24px;
   margin-top: 1.5rem;
   margin-bottom: 24px;
@@ -740,17 +736,15 @@ html {
   left: 0;
 }
 #baseline-vertical-offset .meta {
-  font-size: 18px;
+  font: 400 18px / 1.5 'Verdana', sans-serif;
   font-size: 1.125rem;
-  line-height: 1.5;
   top: 0px;
   top: calc(0rem + -0.1435rem);
   margin-bottom: 0;
 }
 #baseline-vertical-offset .comments {
-  font-size: 14px;
+  font: 400 14px / 1.5 'Verdana', sans-serif;
   font-size: 0.875rem;
-  line-height: 1.5;
   bottom: 24px;
   bottom: calc(1.5rem + -0.1435rem);
   margin-bottom: 0px;
